[gd_scene load_steps=3 format=3 uid="uid://didhoemf7v1r2"]

[ext_resource type="FontFile" uid="uid://c4u2crmr1q1s6" path="res://SpritesF_C/Consola.ttf" id="1_6ylxb"]
[ext_resource type="Script" path="res://Scripts/gameover.gd" id="1_eunw3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eunw3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -864.0
offset_top = -412.0
offset_right = 864.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6ylxb")
theme_override_font_sizes/font_size = 200
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -704.0
offset_top = -156.0
offset_right = 704.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6ylxb")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = 164.0
offset_right = 448.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6ylxb")
theme_override_font_sizes/font_size = 100
text = "INICIO"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -224.0
offset_right = 448.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_6ylxb")
theme_override_font_sizes/font_size = 100
text = "SALIR"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 512.0
offset_right = 1088.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("1_6ylxb")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
